tests/specs/ecosystem/zeppet/actions/2_1_3.test
zeppet/actions/2.1.3
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
export const listen = <K extends keyof HTMLElementEventMap>(eventName: K, handler: (event: HTMLElementEventMap[K]) => void): ActionFn =>({} as never);
                                       ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:5:40

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
export const listen = <K extends keyof HTMLElementEventMap>(eventName: K, handler: (event: HTMLElementEventMap[K]) => void): ActionFn =>({} as never);
                                                                                           ~~~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:5:92

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const bindFieldToObs = <T extends HTMLElement, K extends keyof T>(field: K, obs: Observer<NonNullable<T[K]>>)=>(element: T): T =>({} as never);
                                         ~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:6:42

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/src/index.ts:7:48

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/src/index.ts:8:41

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/index.ts:8:73

TS2304 [ERROR]: Cannot find name 'HTMLElementEventMap'.
    at file://<tmpdir>/src/index.ts:8:154

TS2304 [ERROR]: Cannot find name 'HTMLInputElement'.
export const bindInput = <T extends HTMLInputElement>(obs: Observer<string>): Action<T> =>({} as never);
                                    ~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:9:37

TS2304 [ERROR]: Cannot find name 'HTMLElement'.
    at file://<tmpdir>/src/index.ts:10:34

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/src/index.ts:10:63

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/src/index.ts:10:179

TS2304 [ERROR]: Cannot find name 'HTMLElementTagNameMap'.
    at file://<tmpdir>/src/index.ts:10:208

Found 12 errors.

error: Type checking failed.

